objects/SmartBytes_Work__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Tag__c</fullName>
        <formula>&quot;SmartBytes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SmartBytes Work</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SBW-{0000}</displayFormat>
        <label>SmartBytes Work Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartBytes Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>